default/objects/NVMConnect__DialEntryCall__c/NVMConnect__DialEntryCall__c.object-meta.xml
<CustomObject>
    <label>Dial Entry Call</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial Entry Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>