default/objects/NVMConnect__DialEntryCall__c/fields/NVMConnect__ActiveDialEntry__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__ActiveDialEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Dial Entry</label>
    <referenceTo>NVMConnect__ActiveDialEntry__c</referenceTo>
    <relationshipName>DialEntryCalls</relationshipName>
    <type>Lookup</type>
</CustomField>