default/objects/NVMConnect__DialEntryCall__c/fields/NVMConnect__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>NVMConnect__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>